--- a/project.config.json
+++ b/project.config.json
@@ -5,8 +5,8 @@
 	},
 	"setting": {
 		"urlCheck": true,
-		"es6": false,
-		"enhance": true,
+		"es6": true,
+		"enhance": false,
 		"postcss": false,
 		"minified": false,
 		"newFeature": true,
