--- a/project.config.json
+++ b/project.config.json
@@ -6,7 +6,7 @@
 	"setting": {
 		"urlCheck": true,
 		"es6": true,
-		"enhance": false,
+		"enhance": true,
 		"postcss": false,
 		"minified": false,
 		"newFeature": true,
